fix for Lead conversion Select Account alignment

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -5085,8 +5085,14 @@ div.hasHalfs{
 			font-weight:normal;
 		}
 	}
-	#AccountConvertToView > div{
-		margin-right:0;
+}
+
+#AccountConvertToView{
+	> div{
+		margin-bottom: 0;
+	}
+	.left-column{
+		padding-right: 0;
 	}
 }
 
